# time-series-app

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Procfile  README.md  app.py  fit_time_series.py  requirements-dev.txt  requirements.txt  run.sh  setup.cfg  test_functions.py  test_routes.py  test_upload_requirements.py  ts_functions.py
.github/workflows/: codeql-analysis.yml  publish-pypi.yml  python-app.yml
data/: glossary.csv
static/: glossary.csv  tstyle.css
static/files/: sales.csv  sales2.csv
templates/: base.html  glossary.html  heroku_custom_503.htm  index.html  processing_file.html  processing_sample.html  upload.html
tests/: sales.csv  test_cli.py  test_functions.py  test_routes.py  test_sample_creation.py  test_ts_functions.py  test_upload_requirements.py  test_upload_validation.py
ts_app/: __init__.py  __main__.py  cli.py  dash_app.py  dashboard.py  file_upload.py  fit_time_series.py  flask_app.py  glossary.py  index.py  plotting.py  ts_functions.py  ts_sample.py
ts_app/assets/: dashboard_style.css  glossary.json  home-page.md  summary.md
ts_app/components/: modelling.py
ts_app/dashboard_components/: glossary.py  home_page.py  modelling.py  resources.py  sample.py  upload.py
ts_app/dashboards/: dash_objects.py  dashboard_resources.py  details.md  home_page.py  model_dashboard.py  sample_dashboard.py  upload_dashboard.py
ts_app/pages/: glossary.py  home_page.py  sample.py  upload.py
ts_app/static/: glossary.json  results.csv  tstyle.css
ts_app/templates/: base.html  dash_template.html  glossary.html  heroku_custom_503.htm  index.html  processing_file.html  processing_sample.html  results.html  sample.html  upload.html
