[metadata]
name = ts_app
version = attr: ts_app.__version__
description = A simple dashboard application to interactively fit ARIMA models.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = time_series dashboard ARIMA
author = Abwao
author_email = abwaomusungu@gmail.com
url = https://github.com/Tim-Abwao/time-series-app
license = MIT
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3.8

[options]
install_requires =
  dash>=1.20.0
  statsmodels>=0.12.2
  waitress>=2.0.0
include_package_data = True
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
  ts_app = ts_app:run_in_cli
