[metadata]
name = ts_app
version = attr: ts_app.__version__
description = A simple dashboard application for interactively fitting ARIMA models.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = time_series dashboard ARIMA
author = Abwao
author_email = abwaomusungu@gmail.com
url = https://github.com/Tim-Abwao/time-series-app
license = MIT
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3.9

[options]
install_requires =
  dash>=2.6.1
  openpyxl>=3.0.10
  statsmodels>=0.13.2
  waitress>=2.1.2
include_package_data = True
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
  ts_app = ts_app:_run_in_cli

[options.packages.find]
exclude = tests, tests.*
